# imageprocessing

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
doc/: inline_umlgraph_cache_all.pu
doc/html/: annotated.html  classHistogramEqualization-members.html  classHistogramEqualization.html  classes.html  convolution_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  formula.repository  functions.html  functions_func.html  graph_legend.html  histogram__eq_8h_source.html  histogram__test_8h_source.html  index.html  md_README.html  md_src_mainpage.html  pages.html
doc/html/search/: all_0.js  all_1.js  all_2.js  classes_0.js  functions_0.js  functions_1.js  pages_0.js  searchdata.js
doc/latex/: annotated.tex  classHistogramEqualization.tex  classImage.tex  index.tex  inline_umlgraph_2.eps  md_README.tex  md_src_mainpage.tex  myimage.eps  refman.tex
src/: CMakeLists.txt  convolution.cpp  convolution.h  histogram_eq.cpp  histogram_eq.h  histogram_test.cpp  histogram_test.h  image.h  image.hxx  image_pyramid.cpp  image_pyramid.hpp  main.cpp  mainpage.md  pyramid_generation_cv.hpp
